<?xml version="1.0" encoding="utf-8"?>
<!-- Root Layout -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:paddingLeft="30sp"
    android:paddingRight="15sp"
    android:paddingTop="0sp"
    android:paddingBottom="15sp"
    android:background="@drawable/image1">

    <!-- First Row -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="15sp">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/camera" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:fontFamily="cursive"
            android:text="Dream Stone Video Center"
            android:textAlignment="center"
            android:textColor="@android:color/holo_green_dark"
            android:textSize="45sp"
            android:textStyle="bold" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="15sp">
        <TextView
            android:id="@+id/textView3"
            android:layout_width="112dp"
            android:layout_height="30dp"
            android:fontFamily="sans-serif"
            android:text="Name :"
            android:textSize="20sp"
            android:textStyle="bold" />
        <EditText
            android:id="@+id/editTextTextPersonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="1"
            android:fontFamily="sans-serif-light"
            android:inputType="textPersonName"
            android:textSize="12sp" />
    </LinearLayout>


    <!-- Second Row -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="15sp">
        <TextView
            android:id="@+id/textView9"
            android:layout_width="112dp"
            android:layout_height="30dp"
            android:fontFamily="sans-serif"
            android:text="Date of Birth :"
            android:textSize="18sp"
            android:textStyle="bold" />
        <EditText
            android:id="@+id/editTextTextPersonName2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:fontFamily="sans-serif-light"
            android:inputType="textPersonName"
            android:textSize="12sp" />

    </LinearLayout>

    <!-- Third Row-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="15sp">
        <TextView
            android:id="@+id/textView10"
            android:layout_width="112dp"
            android:layout_height="30dp"
            android:fontFamily="sans-serif"
            android:text="Address :"
            android:textSize="20sp"
            android:textStyle="bold" />
        <EditText
            android:id="@+id/editTextTextPostalAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:fontFamily="sans-serif-light"
            android:inputType="textPersonName"
            android:textSize="12sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="15sp">
        <TextView
            android:id="@+id/textView11"
            android:layout_width="112dp"
            android:layout_height="30dp"
            android:fontFamily="sans-serif"
            android:text="NIC :"
            android:textSize="20sp"
            android:textStyle="bold" />
        <EditText
            android:id="@+id/editTextnic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:fontFamily="sans-serif-light"
            android:inputType="textPersonName"
            android:textSize="12sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="15sp">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="112dp"
            android:layout_height="30dp"
            android:text="Sex :"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spinner1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/country_arrays"
            android:prompt="@string/sex_prompt"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="15sp">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="112dp"
            android:layout_height="30dp"
            android:text="Age Group :"
            android:textSize="18sp"
            android:textStyle="bold" />


        <RadioGroup
            android:id="@+id/radioAge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/radioAge1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_age1"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/radioAge2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_age2"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/radioAge3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_age3"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/radioAge4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_age4"
                android:textSize="18sp" />


        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="5sp">
        <TextView
            android:id="@+id/textView8"
            android:layout_width="112dp"
            android:layout_height="30dp"
            android:text="Interests :"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="49dp"
            android:layout_height="39dp"
            app:srcCompat="@drawable/movie"/>

        <Button
            android:id="@+id/button"
            android:layout_width="171dp"
            android:layout_height="43dp"
            android:text="Select Movies"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="italic"
            android:background="@drawable/roundedbutton1"/>
    </LinearLayout>

</LinearLayout>